# CFS

./: LICENSE  README.md
CFS_Knitro_2D/: CMakeLists.txt
CFS_Knitro_2D/include/: KTRBounds.h  KTRConstants.h  KTRConstraints.h  KTRElements.h  KTREnums.h  KTRException.h  KTRFunctionTypes.h  KTRIProblem.h  KTRISolver.h  KTRMSProcessCallback.h  KTRMipNodeCallback.h  KTRMsInitptCallback.h  KTRNewptCallback.h  KTRObjective.h  KTRProblem.h  KTRProblemLSQ.h  KTRPutString.h  KTRResiduals.h  KTRSolver.h  KTRSolverLSQ.h  KTRTypes.h  KTRVariables.h  README.txt  zlm.h
CFS_Knitro_2D/include/impl/: KTRBounds.hxx  KTRConstraints.hxx  KTRElements.hxx  KTRException.hxx  KTRFunctionTypes.hxx  KTRISolver.hxx  KTRObjective.hxx  KTRProblem.hxx  KTRProblemLSQ.hxx  KTRResiduals.hxx  KTRSolver.hxx  KTRSolverLSQ.hxx  KTRTypes.hxx  KTRVariables.hxx  zlm.hxx
CFS_Knitro_2D/src/: AutoTestCFS.cpp  AutoTestNLNC.cpp  Compare_CFS_NLNC.cpp  MyCFS.cpp  MyNLNC.cpp  MyQP.cpp  PlanningProblem.h  ProblemCFS.h  ProblemNLNC.h  ProblemQP.h  customizedPrint.h  d2problem.h  loadParameter.h
CFS_Matlab_2D/: main_CFS.m  problem.m
CFS_Matlab_2D/lib/: cost_quadratic.m  d2poly.m  triArea.m
CFS_Matlab_Arm/: main_CFS.m
CFS_Matlab_Arm/DERIVESTsuite/: license.txt
CFS_Matlab_Arm/Lib/: CapPos.m  CapPos.mexw64  DrawMap.m  MapFromSTL.m  RobotCapLink.m  RobotFigureLink.m  distLinSeg.m  dist_arm.m  dist_arm_3D.m  dist_arm_3D_Heu.m  dist_link_Heu.m  nldisfn.m  num_jac.m  robotproperty.m  setVertice.m
CFS_Matlab_Arm/data/: M16_ref_2.mat
CFS_Matlab_Arm/figure/: M16iB-figure.mat  RobotCapsules.mat  Worker-figure.mat
CFS_Matlab_Arm/map/: assembly line_Assem1.STL  environment.mat  table.STL  (+1 more)
(+3 files in other folders)
